Fixed a bug with vertical align images in cart preview and product listing.
git-svn-id: http://xe-shop.googlecode.com/svn/trunk@475 a237117d-c3a3-7e14-bcca-fd8395c59b2d

--- a/skins/default/shop.css
+++ b/skins/default/shop.css
@@ -477,14 +477,6 @@ table tbody tr td:last-child {
     border-bottom: 1px dotted #c5c6c7;
 }
 
-#cart-products img {
-    border: 1px solid #cacaca;
-    margin: 0 10px 0 0;
-    background: #fff;
-    padding: 5px;
-    float: left;
-}
-
 #cart-products p {
     line-height: 1.250em;
     margin: 0 0 5px;
@@ -497,6 +489,20 @@ table tbody tr td:last-child {
 
 .cart-preview-price {
     color: #2D5375;
+}
+
+.cart-product-image {
+    display:table-cell;
+    vertical-align:middle;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    border: 1px solid #cacaca;
+    margin: 0 10px 0 0 !important;
+    background: #fff;
+    padding: 5px !important;
+    line-height: 50px !important;
+    float: left;
 }
 
 #header-socials, #header-socials a {
@@ -863,6 +869,8 @@ li span.close-sign, li span.open-sign {
     width: 170px;
     height: 170px;
     display: block;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 .product-list .product-link h4 {
